--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,26 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <select id='dropdown' >
+        <option value='4chan' onchange = "dropDownClick()">4chan</option>
+        <option value='2'>2</option>
+
+      </select>
+
+
+     <!--  <div class="dropdown">
+        <button onclick="dropownClick()" class="dropbtn">Dropdown</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="#" value='4chan'>4chan</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div> -->
+
     </div>
-    <div id="chats"></div>
+    <div id="chats">
+      
+    </div>
   </body>
 </html>
+
