--- a/client/index.html
+++ b/client/index.html
@@ -27,18 +27,17 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <select id='dropdown' >
+      <select id='roomSelect' >
         <option value='All'>All</option>
-        <option value='4chan'>4chan</option>
+<!--         <option value='4chan'>4chan</option>
         <option value='Lobby'>Lobby</option>
-        <option value='lobby'>lobby</option>
-        <option value='Death Star'>Death Star</option>
+        <option value='lobby'>lobby</option> -->
+        <option value='Lobby'>Lobby</option>
       </select>
-      <form id='messageInput'>
+      <form id='send'>
         <input id='message' type="text" name="inputMessage" value=''>
-        <input id='send' class='submit' type="submit" name="submitButton" >        
+        <input class='submit' type="submit" name="submitButton" >        
       </form>
-
     </div>
     <div id="chats">
       
