Completed Bare Minimum

--- a/client/index.html
+++ b/client/index.html
@@ -29,10 +29,9 @@
       <!-- Your HTML goes here! -->
       <select id='roomSelect' >
         <option value='All'>All</option>
-<!--         <option value='4chan'>4chan</option>
-        <option value='Lobby'>Lobby</option>
-        <option value='lobby'>lobby</option> -->
-        <option value='Lobby'>Lobby</option>
+        <option value='4chan'>4chan</option>
+        <option value='lobby'>lobby</option>
+        <option value='add new room'>add new room</option>
       </select>
       <form id='send'>
         <input id='message' type="text" name="inputMessage" value=''>
