--- a/client/index.html
+++ b/client/index.html
@@ -28,9 +28,9 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
       <select id='roomSelect' >
-        <option value='All'>All</option>
-        <option value='4chan'>4chan</option>
+        <option value='All Mesg'>All Mesg</option>
         <option value='lobby'>lobby</option>
+        <option value='4chan'>4chan</option>
         <option value='add new room'>add new room</option>
       </select>
       <form id='send'>
