Refactored code. Completed bare min

--- a/client/index.html
+++ b/client/index.html
@@ -28,10 +28,8 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
       <select id='roomSelect' >
-        <option value='All Mesg'>All Mesg</option>
-        <option value='lobby'>lobby</option>
-        <option value='4chan'>4chan</option>
-        <option value='add new room'>add new room</option>
+        <option value='lobby' selected='selected'>lobby</option>
+        <option id='addnewroom' value='ADD NEW ROOM...'>ADD NEW ROOM...</option>
       </select>
       <form id='send'>
         <input id='message' type="text" name="inputMessage" value=''>
